--- a/project1.ipynb
+++ b/project1.ipynb
@@ -64,12 +64,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "  iso_code      continent location        date  total_cases  new_cases  \\\n0      ABW  North America    Aruba  2020-03-13          2.0        2.0   \n1      ABW  North America    Aruba  2020-03-19          0.0        0.0   \n2      ABW  North America    Aruba  2020-03-20          4.0        2.0   \n3      ABW  North America    Aruba  2020-03-21          0.0        0.0   \n4      ABW  North America    Aruba  2020-03-22          0.0        0.0   \n\n   new_cases_smoothed  total_deaths  new_deaths  new_deaths_smoothed  ...  \\\n0               0.000           0.0         0.0                  0.0  ...   \n1               0.286           0.0         0.0                  0.0  ...   \n2               0.286           0.0         0.0                  0.0  ...   \n3               0.286           0.0         0.0                  0.0  ...   \n4               0.286           0.0         0.0                  0.0  ...   \n\n   gdp_per_capita  extreme_poverty  cardiovasc_death_rate  \\\n0       35973.781              0.0                    0.0   \n1       35973.781              0.0                    0.0   \n2       35973.781              0.0                    0.0   \n3       35973.781              0.0                    0.0   \n4       35973.781              0.0                    0.0   \n\n   diabetes_prevalence  female_smokers  male_smokers  handwashing_facilities  \\\n0                11.62             0.0           0.0                     0.0   \n1                11.62             0.0           0.0                     0.0   \n2                11.62             0.0           0.0                     0.0   \n3                11.62             0.0           0.0                     0.0   \n4                11.62             0.0           0.0                     0.0   \n\n   hospital_beds_per_thousand  life_expectancy  human_development_index  \n0                         0.0            76.29                      0.0  \n1                         0.0            76.29                      0.0  \n2                         0.0            76.29                      0.0  \n3                         0.0            76.29                      0.0  \n4                         0.0            76.29                      0.0  \n\n[5 rows x 41 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>iso_code</th>\n      <th>continent</th>\n      <th>location</th>\n      <th>date</th>\n      <th>total_cases</th>\n      <th>new_cases</th>\n      <th>new_cases_smoothed</th>\n      <th>total_deaths</th>\n      <th>new_deaths</th>\n      <th>new_deaths_smoothed</th>\n      <th>...</th>\n      <th>gdp_per_capita</th>\n      <th>extreme_poverty</th>\n      <th>cardiovasc_death_rate</th>\n      <th>diabetes_prevalence</th>\n      <th>female_smokers</th>\n      <th>male_smokers</th>\n      <th>handwashing_facilities</th>\n      <th>hospital_beds_per_thousand</th>\n      <th>life_expectancy</th>\n      <th>human_development_index</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ABW</td>\n      <td>North America</td>\n      <td>Aruba</td>\n      <td>2020-03-13</td>\n      <td>2.0</td>\n      <td>2.0</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>35973.781</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>11.62</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>76.29</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ABW</td>\n      <td>North America</td>\n      <td>Aruba</td>\n      <td>2020-03-19</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.286</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>35973.781</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>11.62</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>76.29</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ABW</td>\n      <td>North America</td>\n      <td>Aruba</td>\n      <td>2020-03-20</td>\n      <td>4.0</td>\n      <td>2.0</td>\n      <td>0.286</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>35973.781</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>11.62</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>76.29</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ABW</td>\n      <td>North America</td>\n      <td>Aruba</td>\n      <td>2020-03-21</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.286</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>35973.781</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>11.62</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>76.29</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ABW</td>\n      <td>North America</td>\n      <td>Aruba</td>\n      <td>2020-03-22</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.286</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>35973.781</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>11.62</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>76.29</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 41 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "# Replacing all the NaN to zero\n",
+    "raw_data_cv19 = raw_data_cv19.fillna(0)\n",
+    "raw_data_cv19.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Replacing all the NaN to zero\n"
-   ]
+   "source": []
   }
  ]
 }
