aus and canada df

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -225,13 +225,55 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>continent</th>\n      <th>location</th>\n      <th>total_cases</th>\n      <th>total_deaths</th>\n      <th>total_tests</th>\n      <th>tests_per_case</th>\n      <th>stringency_index</th>\n      <th>population</th>\n      <th>population_density</th>\n      <th>median_age</th>\n      <th>aged_65_older</th>\n      <th>aged_70_older</th>\n      <th>gdp_per_capita</th>\n      <th>extreme_poverty</th>\n      <th>handwashing_facilities</th>\n      <th>hospital_beds_per_thousand</th>\n      <th>human_development_index</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>36174</th>\n      <td>Asia</td>\n      <td>Qatar</td>\n      <td>125533.0</td>\n      <td>214.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>2881060.0</td>\n      <td>227.322</td>\n      <td>31.9</td>\n      <td>1.307</td>\n      <td>0.617</td>\n      <td>116935.600</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>1.20</td>\n      <td>0.856</td>\n    </tr>\n    <tr>\n      <th>26752</th>\n      <td>Europe</td>\n      <td>Luxembourg</td>\n      <td>8431.0</td>\n      <td>124.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>625976.0</td>\n      <td>231.447</td>\n      <td>39.7</td>\n      <td>14.312</td>\n      <td>9.842</td>\n      <td>94277.965</td>\n      <td>0.2</td>\n      <td>0.000</td>\n      <td>4.51</td>\n      <td>0.904</td>\n    </tr>\n    <tr>\n      <th>37829</th>\n      <td>Asia</td>\n      <td>Singapore</td>\n      <td>57742.0</td>\n      <td>27.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>5850343.0</td>\n      <td>7915.731</td>\n      <td>42.4</td>\n      <td>12.922</td>\n      <td>7.049</td>\n      <td>85535.383</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>2.40</td>\n      <td>0.932</td>\n    </tr>\n    <tr>\n      <th>6740</th>\n      <td>Asia</td>\n      <td>Brunei</td>\n      <td>146.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>437483.0</td>\n      <td>81.347</td>\n      <td>32.4</td>\n      <td>4.591</td>\n      <td>2.382</td>\n      <td>71809.251</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>2.70</td>\n      <td>0.853</td>\n    </tr>\n    <tr>\n      <th>20633</th>\n      <td>Europe</td>\n      <td>Ireland</td>\n      <td>35740.0</td>\n      <td>1803.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>4937796.0</td>\n      <td>69.874</td>\n      <td>38.7</td>\n      <td>13.928</td>\n      <td>8.678</td>\n      <td>67335.293</td>\n      <td>0.2</td>\n      <td>0.000</td>\n      <td>2.96</td>\n      <td>0.938</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>41126</th>\n      <td>North America</td>\n      <td>Turks and Caicos Islands</td>\n      <td>686.0</td>\n      <td>6.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>38718.0</td>\n      <td>37.312</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.000</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.00</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>10130</th>\n      <td>North America</td>\n      <td>Cuba</td>\n      <td>5531.0</td>\n      <td>122.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>11326616.0</td>\n      <td>110.408</td>\n      <td>43.1</td>\n      <td>14.738</td>\n      <td>9.719</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>85.198</td>\n      <td>5.20</td>\n      <td>0.777</td>\n    </tr>\n    <tr>\n      <th>18509</th>\n      <td>Oceania</td>\n      <td>Guam</td>\n      <td>2443.0</td>\n      <td>47.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>168783.0</td>\n      <td>304.128</td>\n      <td>31.4</td>\n      <td>9.551</td>\n      <td>5.493</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.00</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>18113</th>\n      <td>North America</td>\n      <td>Greenland</td>\n      <td>14.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>56772.0</td>\n      <td>0.137</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.000</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.00</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>47115</th>\n      <td>0</td>\n      <td>International</td>\n      <td>696.0</td>\n      <td>7.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.000</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.00</td>\n      <td>0.000</td>\n    </tr>\n  </tbody>\n</table>\n<p>212 rows × 17 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 32
     }
    ],
    "source": [
     "## Plotting countries on GDP\n",
     "continent_group = q1_data_frame.sort_values(by='gdp_per_capita',ascending=False)\n",
+    "continent_group.to_csv('Cleaned_Data\\continent_group.csv')\n",
     "continent_group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "          continent location  total_cases  total_deaths  total_tests  \\\n7601  North America   Canada     156961.0        9291.0    7295024.0   \n\n      tests_per_case  stringency_index  population  population_density  \\\n7601          51.276               0.0  37742157.0               4.037   \n\n      median_age  aged_65_older  aged_70_older  gdp_per_capita  \\\n7601        41.4         16.984         10.797       44017.591   \n\n      extreme_poverty  handwashing_facilities  hospital_beds_per_thousand  \\\n7601              0.5                     0.0                         2.5   \n\n      human_development_index  \n7601                    0.926  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>continent</th>\n      <th>location</th>\n      <th>total_cases</th>\n      <th>total_deaths</th>\n      <th>total_tests</th>\n      <th>tests_per_case</th>\n      <th>stringency_index</th>\n      <th>population</th>\n      <th>population_density</th>\n      <th>median_age</th>\n      <th>aged_65_older</th>\n      <th>aged_70_older</th>\n      <th>gdp_per_capita</th>\n      <th>extreme_poverty</th>\n      <th>handwashing_facilities</th>\n      <th>hospital_beds_per_thousand</th>\n      <th>human_development_index</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>7601</th>\n      <td>North America</td>\n      <td>Canada</td>\n      <td>156961.0</td>\n      <td>9291.0</td>\n      <td>7295024.0</td>\n      <td>51.276</td>\n      <td>0.0</td>\n      <td>37742157.0</td>\n      <td>4.037</td>\n      <td>41.4</td>\n      <td>16.984</td>\n      <td>10.797</td>\n      <td>44017.591</td>\n      <td>0.5</td>\n      <td>0.0</td>\n      <td>2.5</td>\n      <td>0.926</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 44
+    }
+   ],
+   "source": [
+    "australia_df = continent_group[continent_group['location'] == 'Australia']\n",
+    "canada_df = continent_group[continent_group['location'] == 'Canada']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "          continent   location  total_cases  total_deaths  total_tests  \\\n2518        Oceania  Australia      27063.0         882.0          0.0   \n7601  North America     Canada     156961.0        9291.0    7295024.0   \n\n      tests_per_case  stringency_index  population  population_density  \\\n2518           0.000               0.0  25499881.0               3.202   \n7601          51.276               0.0  37742157.0               4.037   \n\n      median_age  aged_65_older  aged_70_older  gdp_per_capita  \\\n2518        37.9         15.504         10.129       44648.710   \n7601        41.4         16.984         10.797       44017.591   \n\n      extreme_poverty  handwashing_facilities  hospital_beds_per_thousand  \n2518              0.5                     0.0                        3.84  \n7601              0.5                     0.0                        2.50  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>continent</th>\n      <th>location</th>\n      <th>total_cases</th>\n      <th>total_deaths</th>\n      <th>total_tests</th>\n      <th>tests_per_case</th>\n      <th>stringency_index</th>\n      <th>population</th>\n      <th>population_density</th>\n      <th>median_age</th>\n      <th>aged_65_older</th>\n      <th>aged_70_older</th>\n      <th>gdp_per_capita</th>\n      <th>extreme_poverty</th>\n      <th>handwashing_facilities</th>\n      <th>hospital_beds_per_thousand</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2518</th>\n      <td>Oceania</td>\n      <td>Australia</td>\n      <td>27063.0</td>\n      <td>882.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>25499881.0</td>\n      <td>3.202</td>\n      <td>37.9</td>\n      <td>15.504</td>\n      <td>10.129</td>\n      <td>44648.710</td>\n      <td>0.5</td>\n      <td>0.0</td>\n      <td>3.84</td>\n    </tr>\n    <tr>\n      <th>7601</th>\n      <td>North America</td>\n      <td>Canada</td>\n      <td>156961.0</td>\n      <td>9291.0</td>\n      <td>7295024.0</td>\n      <td>51.276</td>\n      <td>0.0</td>\n      <td>37742157.0</td>\n      <td>4.037</td>\n      <td>41.4</td>\n      <td>16.984</td>\n      <td>10.797</td>\n      <td>44017.591</td>\n      <td>0.5</td>\n      <td>0.0</td>\n      <td>2.50</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 62
+    }
+   ],
+   "source": [
+    "aus_can = continent_group.iloc[21:23,0:16]\n",
+    "aus_can"
    ]
   },
   {
