country_infection_rate

--- a/sumukh_kumble/skprojectDraft4.ipynb
+++ b/sumukh_kumble/skprojectDraft4.ipynb
@@ -665,7 +665,7 @@
     "\n",
     "\n",
     "    print(f'Appending data for {country}\\n')\n",
-    "    print(f'Population: {float(population)}\\nInection Rate: {float(round(infection_rates,2))}\\n')\n",
+    "    print(f'Population: {float(population)}\\nInfection Rate: {float(round(infection_rates,2))}\\n')\n",
     "    \n",
     "\n"
    ]
