--- a/sumukh_kumble/Samplecode.ipynb
+++ b/sumukh_kumble/Samplecode.ipynb
@@ -176,7 +176,91 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Index(['iso_code', 'continent', 'location', 'date', 'total_cases', 'new_cases',\n",
+    "       'new_cases_smoothed', 'total_deaths', 'new_deaths',\n",
+    "       'new_deaths_smoothed', 'total_cases_per_million',\n",
+    "       'new_cases_per_million', 'new_cases_smoothed_per_million',\n",
+    "       'total_deaths_per_million', 'new_deaths_per_million',\n",
+    "       'new_deaths_smoothed_per_million', 'new_tests', 'total_tests',\n",
+    "       'total_tests_per_thousand', 'new_tests_per_thousand',\n",
+    "       'new_tests_smoothed', 'new_tests_smoothed_per_thousand',\n",
+    "       'tests_per_case', 'positive_rate', 'tests_units', 'stringency_index',\n",
+    "       'population', 'population_density', 'median_age', 'aged_65_older',\n",
+    "       'aged_70_older', 'gdp_per_capita', 'extreme_poverty',\n",
+    "       'cardiovasc_death_rate', 'diabetes_prevalence', 'female_smokers',\n",
+    "       'male_smokers', 'handwashing_facilities', 'hospital_beds_per_thousand',\n",
+    "       'life_expectancy', 'human_development_index'],\n",
+    "      dtype='object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecting relevant columns for data Analysis\n",
+    "gdp_death_rate = raw_covid_19_data[['location','gdp_per_capita','total_deaths']]\n",
+    "\n",
+    "# Dropping International and World From the DataFrame\n",
+    "gdp_death_rate = gdp_death_rate[\n",
+    "    (gdp_death_rate['location']!='World')&\n",
+    "    (gdp_death_rate['location']!='International')]\n",
+    "\n",
+    "# Dropping Duplicate Rows\n",
+    "gdp_death_rate = gdp_death_rate.drop_duplicates('location',keep='last').reset_index(drop=True)\n",
+    "\n",
+    "# Plotting Two Subplots\n",
+    "x_gdp = gdp_death_rate['gdp_per_capita']\n",
+    "y_td = gdp_death_rate['total_deaths']\n",
+    "y_inf_rate = country_infection_rate['Infection Rate']\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(2)\n",
+    "fig2.suptitle(f'GDP vs Infection Rate and Death Toll\\nAnalysed on {current_time}')\n",
+    "plt.xlabel('GDP Rate', fontsize=15)\n",
+    "\n",
+    "ax2[0].scatter(x_gdp, y_td, edgecolor='black', c='#00fff7')\n",
+    "ax2[0].set_ylabel('Total Deaths',fontsize=15)\n",
+    "\n",
+    "ax2[1].scatter(x_gdp, y_inf_rate, edgecolor='black', c='#ff0019')\n",
+    "ax2[1].set_ylabel('Infection Rate',fontsize=15)\n",
+    "\n",
+    "fig1.tight_layout()\n",
+    "ax2[0].grid(True)\n",
+    "ax2[1].grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a random list of countries\n",
+    "random_country_list = list(hdi_dataframe['location'].sample(20))\n",
+    "\n",
+    "# Creating a for loop to select 20 random countries and provide\n",
+    "for country1 in random_country_list:\n",
+    "\n",
+    "    # Creating a new list based on the country selected\n",
+    "    \n",
+    "    hdi_index = hdi_dataframe[hdi_dataframe['location']==country1]\n",
+    "\n",
+    "    x_country = hdi_index['location']\n",
+    "    y_hdi = hdi_index['human_development_index']\n",
+    "    y_total_deaths = hdi_index['total_deaths']\n",
+    "\n",
+    "    # Bar Graph\n",
+    "    fig3, ax3 = plt.subplots(1,1)\n",
+    "\n",
+    "    \n",
+    "    print(f'{x_country}\\n {y_hdi}\\n {y_total_deaths}\\n')\n",
+    "\n",
+    "\n",
+    "    "
+   ]
   }
  ]
 }
