--- a/sumukh_kumble/Samplecode.ipynb
+++ b/sumukh_kumble/Samplecode.ipynb
@@ -537,7 +537,350 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Scatter Plot\n",
+    "x_pop_density = clean_pop_density_case['population_density']\n",
+    "y_total_cases = clean_pop_density_case['total_cases']\n",
+    "\n",
+    "# Linear Regression Equation\n",
+    "pop_slope, pop_int, pop_r, pop_p, pop_stderr = st.linregress(np.log10(x_pop_density), (y_total_cases))\n",
+    "\n",
+    "pop_line_eq = f'y = {str(round(pop_slope,2))}x + {str(round(pop_int,2))}'\n",
+    "\n",
+    "pop_line_of_best_fit = np.log10(x_pop_density) * pop_slope + pop_int\n",
+    "\n",
+    "\n",
+    "fig1, ax1 = plt.subplots()\n",
+    "print(f'The r-squared value is: {pop_r**2}\\nThe linear regression equation is {pop_line_eq}')\n",
+    "\n",
+    "# With Log Scales\n",
+    "ax1.set_ylabel(f'Total Cases')\n",
+    "ax1.set_yscale('symlog')\n",
+    "ax1.set_xscale('symlog')\n",
+    "ax1.set_xlabel(f'Population Density')\n",
+    "ax1.scatter(x_pop_density,y_total_cases, edgecolors='#000000', c='#0ac940')\n",
+    "ax1.plot(x_pop_density, pop_line_of_best_fit, c='#00e5ff')\n",
+    "ax1.grid(True)\n",
+    "ax1.legend([pop_line_eq])\n",
+    "fig1.set_size_inches(5,5)\n",
+    "fig1.tight_layout()\n",
+    "plt.savefig('Images\\population_den_total_cases.png')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting Two Subplots\n",
+    "x_gdp = gdp_death_rate['gdp_per_capita']\n",
+    "y_td = gdp_death_rate['total_deaths']\n",
+    "y_inf_rate = country_infection_rate['Infection Rate']\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(2)\n",
+    "fig2.suptitle(f'GDP vs Infection Rate and Death Toll\\nAnalysed on {current_time}')\n",
+    "plt.xlabel('GDP Rate', fontsize=15)\n",
+    "\n",
+    "ax2[0].scatter(x_gdp, y_td, edgecolor='black', c='#00fff7')\n",
+    "ax2[0].set_ylabel('Total Deaths',fontsize=15)\n",
+    "\n",
+    "ax2[0].set_yscale('symlog')\n",
+    "ax2[0].set_xscale('symlog')\n",
+    "\n",
+    "ax2[1].scatter(x_gdp, y_inf_rate, edgecolor='black', c='#ff0019')\n",
+    "ax2[1].set_ylabel('Infection Rate',fontsize=15)\n",
+    "ax2[1].set_yscale('symlog')\n",
+    "ax2[1].set_xscale('symlog')\n",
+    "fig1.tight_layout()\n",
+    "ax2[0].grid(True)\n",
+    "ax2[1].grid(True)\n",
+    "fig2.set_size_inches(10,10)\n",
+    "plt.savefig('Images\\GDPvsInfRateDeathToll.png')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generating Two Seperate Linear Regressions\n",
+    "\n",
+    "# Death Rate Linear Regression\n",
+    "gdp_slope, gdp_int, gdp_r, gdp_p, gdp_stderr = st.linregress(np.log10(x_gdp), y_td)\n",
+    "\n",
+    "gdpdr_line_eq = f'y = {str(round(gdp_slope,2))}x + {str(round(gdp_int,2))}'\n",
+    "\n",
+    "gdpdr_best_fit = np.log10(x_gdp) * gdp_slope + gdp_int\n",
+    "\n",
+    "# Death Rate Linear Regression\n",
+    "gdpinf_slope, gdpinf_int, gdpinf_r, gdpinf_p, gdpinf_stderr = st.linregress(np.log10(x_gdp), y_inf_rate)\n",
+    "\n",
+    "gdpinf_line_eq = f'y = {str(round(gdpinf_slope,2))}x + {str(round(gdpinf_int,2))}'\n",
+    "\n",
+    "gdpinf_best_fit = np.log10(x_gdp) * gdpinf_slope + gdpinf_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name &#39;gdp_death_rate&#39; is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m&lt;ipython-input-1-91a99219fb53&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Removing Countries with zero deaths or GDP\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----&gt; 2\u001b[1;33m gdp_death_rate = gdp_death_rate[\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[0mgdp_death_rate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m&#39;gdp_per_capita&#39;\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m&gt;\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m&amp;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[0mgdp_death_rate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m&#39;total_deaths&#39;\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m&gt;\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m ]\n",
+      "\u001b[1;31mNameError\u001b[0m: name &#39;gdp_death_rate&#39; is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Removing Countries with zero deaths or GDP\n",
+    "gdp_death_rate = gdp_death_rate[\n",
+    "    (gdp_death_rate['gdp_per_capita']>0)&\n",
+    "    (gdp_death_rate['total_deaths']>0)\n",
+    "]\n",
+    "gdp_death_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name &#39;country_infection_rate&#39; is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m&lt;ipython-input-2-d1fb64c0895e&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Removing countries with no reported cases\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----&gt; 2\u001b[1;33m \u001b[0mcountry_infection_rate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcountry_infection_rate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcountry_infection_rate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m&#39;Infection Rate&#39;\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m&gt;\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mcountry_infection_rate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name &#39;country_infection_rate&#39; is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Removing countries with no reported cases\n",
+    "country_infection_rate = country_infection_rate[country_infection_rate['Infection Rate']>0]\n",
+    "country_infection_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatter Plot\n",
+    "x_pop_density = clean_pop_density_case['population_density']\n",
+    "y_total_cases = clean_pop_density_case['total_cases']\n",
+    "\n",
+    "# Linear Regression Equation\n",
+    "pop_slope, pop_int, pop_r, pop_p, pop_stderr = st.linregress(np.log10(x_pop_density), (y_total_cases))\n",
+    "\n",
+    "pop_line_eq = f'y = {str(round(pop_slope,2))}x + {str(round(pop_int,2))}'\n",
+    "\n",
+    "pop_line_of_best_fit = np.log10(x_pop_density) * pop_slope + pop_int\n",
+    "\n",
+    "\n",
+    "fig1, ax1 = plt.subplots()\n",
+    "print(f'The r-squared value is: {pop_r**2}\\nThe linear regression equation is {pop_line_eq}')\n",
+    "\n",
+    "# With Log Scales\n",
+    "ax1.set_ylabel(f'Total Cases')\n",
+    "ax1.set_yscale('symlog')\n",
+    "ax1.set_xscale('symlog')\n",
+    "ax1.set_xlabel(f'Population Density')\n",
+    "ax1.scatter(x_pop_density,y_total_cases, edgecolors='#000000', c='#0ac940')\n",
+    "ax1.plot(x_pop_density, pop_line_of_best_fit, c='#00e5ff')\n",
+    "ax1.grid(True)\n",
+    "ax1.legend([pop_line_eq])\n",
+    "fig1.set_size_inches(5,5)\n",
+    "fig1.tight_layout()\n",
+    "plt.savefig('Images\\population_den_total_cases.png')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdpinf_slope, gdpinf_int, gdp_r, gdp_p, gdp_stderr = st.linregress(np.log10(x_gdp), np.log10(y_td))\n",
+    "\n",
+    "gdpdr_line_eq = f'y = {str(round(gdp_slope,2))}x + {str(round(gdp_int,2))}'\n",
+    "\n",
+    "gdpdr_best_fit = (x_gdp) * gdp_slope + gdp_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting GDP vs Total Deaths and Infection Rates\n",
+    "x_gdp = merged_df_td_inf['GDP']\n",
+    "y_td = merged_df_td_inf['Total Deaths']\n",
+    "y_inf_rate = merged_df_td_inf['Infection Rate']\n",
+    "\n",
+    "# Setting the Linear Regression GDP vs Total Deaths\n",
+    "\n",
+    "gdp_slope, gdp_int, gdp_r, gdp_p, gdp_stderr = st.linregress(np.log10(x_gdp), np.log10(y_td))\n",
+    "\n",
+    "gdpdr_line_eq = f'y = {str(round(gdp_slope,2))}x + {str(round(gdp_int,2))}'\n",
+    "\n",
+    "gdpdr_best_fit = (x_gdp) * gdp_slope + gdp_int\n",
+    "#----------------------------------#\n",
+    "# Linear Regression for GDP vs Infection Rate\n",
+    "\n",
+    "gdpinf_slope, gdpinf_int, gdpinf_r, gdpinf_p, gdpinf_stderr = st.linregress(np.log10(x_gdp),(y_inf_rate))\n",
+    "\n",
+    "gdpinf_line_eq = f'y = {str(round(gdpinf_slope,2))}x + {str(round(gdpinf_int,2))}'\n",
+    "\n",
+    "gdpinf_best_fit = np.log10(x_gdp) * gdpinf_slope + gdpinf_int\n",
+    "\n",
+    "# Plotting the Data\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(2)\n",
+    "fig2.set_size_inches(10,10)\n",
+    "\n",
+    "# GDP vs Total Deaths\n",
+    "ax2[0].set_xscale('symlog')\n",
+    "ax2[0].set_yscale('symlog')\n",
+    "ax2[0].scatter(x_gdp,y_td, edgecolors='black', c='#ff0019')\n",
+    "ax2[0].plot(x_gdp,gdpdr_best_fit,c='#00e5ff')\n",
+    "ax2[0].set_ylabel('Total Deaths')\n",
+    "ax2[0].set_xlabel('GDP')\n",
+    "ax2[0].grid(True)\n",
+    "ax2[0].legend([gdpdr_line_eq])\n",
+    "print(f')\n",
+    "\n",
+    "# GDP vs Infection Rate\n",
+    "ax2[1].set_xscale('symlog')\n",
+    "ax2[1].set_yscale('symlog')\n",
+    "ax2[1].scatter(x_gdp,y_inf_rate, edgecolors='black', c='#00e1ff')\n",
+    "ax2[1].plot(x_gdp,gdpinf_best_fit,c='#00e5ff')\n",
+    "ax2[1].set_ylabel('Infection Rate')\n",
+    "ax2[1].set_xlabel('GDP')\n",
+    "ax2[1].grid(True)\n",
+    "ax2[1].legend([gdpinf_line_eq])\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting Two Subplots\n",
+    "x_gdp = gdp_death_rate['gdp_per_capita']\n",
+    "y_td = gdp_death_rate['total_deaths']\n",
+    "y_inf_rate = country_infection_rate['Infection Rate']\n",
+    "\n",
+    "# Setting the Linear Regression GDP vs Total Deaths\n",
+    "\n",
+    "gdp_slope, gdp_int, gdp_r, gdp_p, gdp_stderr = st.linregress(x_gdp, y_td)\n",
+    "\n",
+    "gdpdr_line_eq = f'y = {str(round(gdp_slope,2))}x + {str(round(gdp_int,2))}'\n",
+    "\n",
+    "gdpdr_best_fit = x_gdp * gdp_slope + gdp_int\n",
+    "\n",
+    "#----------------------------------#\n",
+    "# Linear Regression for GDP vs Infection Rate\n",
+    "\n",
+    "gdpinf_slope, gdpinf_int, gdpinf_r, gdpinf_p, gdpinf_stderr = st.linregress(x_gdp,y_inf_rate)\n",
+    "\n",
+    "gdpinf_line_eq = f'y = {str(round(gdpinf_slope,2))}x + {str(round(gdpinf_int,2))}'\n",
+    "\n",
+    "gdpinf_best_fit = x_gdp * gdpinf_slope + gdpinf_int\n",
+    "\n",
+    "# Plotting\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(2)\n",
+    "fig2.set_size_inches(10,10)\n",
+    "fig2.suptitle(f'GDP vs Infection Rate and Death Toll\\nAnalysed on {current_time}')\n",
+    "plt.xlabel('GDP Rate', fontsize=15)\n",
+    "\n",
+    "ax2[0].scatter(x_gdp, y_td, edgecolor='black', c='#00fff7')\n",
+    "ax2[0].set_ylabel('Total Deaths',fontsize=15)\n",
+    "ax2[0].plot(x_gdp, gdpdr_best_fit, c='#141414')\n",
+    "\n",
+    "ax2[1].scatter(x_gdp, y_inf_rate, edgecolor='black', c='#ff0019')\n",
+    "ax2[1].set_ylabel('Infection Rate',fontsize=15)\n",
+    "ax2[0].plot(x_gdp, gdpinf_best_fit, c='#141414')\n",
+    "\n",
+    "fig2.tight_layout()\n",
+    "ax2[0].grid(True)\n",
+    "ax2[1].grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting Two Subplots\n",
+    "x_gdp = gdp_death_rate['gdp_per_capita']\n",
+    "y_td = gdp_death_rate['total_deaths']\n",
+    "y_inf_rate = country_infection_rate['Infection Rate']\n",
+    "\n",
+    "# Setting the Linear Regression GDP vs Total Deaths\n",
+    "\n",
+    "gdp_slope, gdp_int, gdp_r, gdp_p, gdp_stderr = st.linregress(x_gdp, y_td)\n",
+    "\n",
+    "gdpdr_line_eq = f'y = {str(round(gdp_slope,2))}x + {str(round(gdp_int,2))}'\n",
+    "\n",
+    "gdpdr_best_fit = x_gdp * gdp_slope + gdp_int\n",
+    "\n",
+    "#----------------------------------#\n",
+    "# Linear Regression for GDP vs Infection Rate\n",
+    "\n",
+    "gdpinf_slope, gdpinf_int, gdpinf_r, gdpinf_p, gdpinf_stderr = st.linregress(x_gdp,y_inf_rate)\n",
+    "\n",
+    "gdpinf_line_eq = f'y = {str(round(gdpinf_slope,2))}x + {str(round(gdpinf_int,2))}'\n",
+    "\n",
+    "gdpinf_best_fit = x_gdp * gdpinf_slope + gdpinf_int\n",
+    "\n",
+    "# Plotting\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(2)\n",
+    "fig2.set_size_inches(10,10)\n",
+    "fig2.suptitle(f'GDP vs Infection Rate and Death Toll\\nAnalysed on {current_time}')\n",
+    "plt.xlabel('GDP Rate', fontsize=15)\n",
+    "\n",
+    "ax2[0].scatter(x_gdp, y_td, edgecolor='black', c='#00fff7')\n",
+    "ax2[0].set_ylabel('Total Deaths',fontsize=15)\n",
+    "ax2[0].plot(x_gdp, gdpdr_best_fit, c='#141414')\n",
+    "\n",
+    "ax2[1].scatter(x_gdp, y_inf_rate, edgecolor='black', c='#ff0019')\n",
+    "ax2[1].set_ylabel('Infection Rate',fontsize=15)\n",
+    "ax2[1].plot(x_gdp, gdpinf_best_fit, c='#141414')\n",
+    "\n",
+    "fig2.tight_layout()\n",
+    "ax2[0].grid(True)\n",
+    "ax2[1].grid(True)\n",
+    "plt.show()"
+   ]
   }
  ]
 }
